--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "test": "cross-env NODE_ENV=test PORT=1234 jest --verbose users.test.js",
     "test:watch": "npm run test -- --watch",
-    "commit": "cz"
+    "commit": "cz",
+    "commit:full": "git add . & npm run commit & git push origin main"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.11"
+    "mongoose": "^5.12.11",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
